--- a/client/src/pages/reports/Print.css
+++ b/client/src/pages/reports/Print.css
@@ -1,58 +1,62 @@
 @page {
-  margin: 10mm;
+  margin: 0;
 }
-.print-page-table {
+.print-table {
   width: 100%;
 }
 
-.print-page-table,
-.print-page-table tr,
-.print-page-table th,
-.print-page-table td {
-  /* outline: 1px solid grey; DEBUG */
+.print-table,
+.print-table tr,
+.print-table th,
+.print-table td {
+  /* DEBUG *************************************************/
+  /* outline: 1px solid grey; */
 }
 
-.print-page-header-space{
-  height: 30px;
+.print-header-space{
+  height: 50px;
 }
-.print-page-footer-space {
-  height: 30px;
-}
-
-.print-page-table th {
-  padding: 4px 0;
+.print-footer-space {
+  height: 50px;
 }
 
-.print-page-table td {
-  padding: 4px 1rem;
+.print-row-label {
+  padding: 4px 0 !important;
+  font-style: italic !important;
+  color: grey !important;
 }
-.print-page-table th {
+
+.print-row-content {
+  padding: 4px 1rem !important;
+}
+
+
+.print-table th {
   vertical-align: top;
   font-family: 'Times New Roman', Times, serif;
-  font-style: italic;
   width: 20%;
 }
-.print-page-table td {
-  padding-left: 1rem;
-}
 
-.print-page-header-content,
-.print-page-footer-content {
+.print-header-content,
+.print-footer-content {
   position: fixed;
-  width: 100%;
-  padding: 5px 1rem;
   display: flex;
+  width: 95%;
+  margin: 10px auto;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  /* DEBUG *************************************************/
+  /* outline: 1px solid red;*/
+  padding: 1rem;
 }
 
-.print-page-header-content {
+.print-header-content {
   top: 0mm;
   border-bottom: 1px solid black;
 }
 
-.print-page-footer-content {
+.print-footer-content {
   bottom: 0mm;
   border-top: 1px solid black;
 
@@ -63,7 +67,15 @@
   text-align: center;
 }
 
+.print-table-title {
+  font-size: 18px;
+}
+.print-table-subtitle {
+  font-style: italic;
+}
+
 @media print {
+
   thead {display: table-header-group;}
   tfoot {display: table-footer-group;}
 
