NCI-Agency/anet#50: Add banner, uuid link to header, change title

--- a/client/src/pages/reports/Print.css
+++ b/client/src/pages/reports/Print.css
@@ -13,7 +13,9 @@
     display: none;
   }
 
-  .print-page .workflow-action button {
+  .print-page .workflow-action button,
+  .print-page .banner
+   {
     display: inline-block !important;
   }
   body {
