NCI-Agency/anet#3215: Implement author selecting from attendees
Checkboxes for each advisor

Database changes not done yet

--- a/client/src/pages/reports/AttendeesTable.css
+++ b/client/src/pages/reports/AttendeesTable.css
@@ -1,13 +1,16 @@
-div.radio.primary > label {
+div.radio.primary > label,
+div.checkbox.primary > label {
   display: flex;
   flex-direction: row-reverse;
 }
 
-div.radio.primary > label > input {
+div.radio.primary > label > input,
+div.checkbox.primary > label > input{
   margin: 2px 0 0 -2px;
 }
 
-div.radio.primary > label > span {
+div.radio.primary > label > span,
+div.checkbox.primary > label > span {
   padding-right: 25px;
   padding-top: 4px;
   line-height: normal;
