NCI-Agency/anet#3215: Make current author green labeled
Fix e2e tests failing

Fix reportPerson.author not saved to DB

--- a/client/src/pages/reports/AttendeesTable.css
+++ b/client/src/pages/reports/AttendeesTable.css
@@ -15,3 +15,13 @@ div.checkbox.primary > label > span {
   padding-top: 4px;
   line-height: normal;
 }
+
+.isCurrentEditor.checkbox.primary > label > span {
+  background-color: green;
+}
+
+@media print {
+  .author-attendee {
+    display: none;
+  }
+}
