NCI-Agency/anet#598: Improve tooltip interactions
Fix useless previewId prop propagating to html node

Also make the tooltip preview render above header with z-index

--- a/client/src/components/ModelTooltip.css
+++ b/client/src/components/ModelTooltip.css
@@ -1,4 +1,9 @@
 /* set tooltips container style */
+/* make it above header*/
+.bp3-portal {
+  z-index: 1101;
+}
+
 .linkto-model-preview-portal .bp3-transition-container {
   border: 2px solid black;
   box-shadow: 4px 4px 4px rgba(0,0,0,.5);
