--- a/client/src/components/ModelTooltip.css
+++ b/client/src/components/ModelTooltip.css
@@ -4,7 +4,7 @@
   z-index: 1101;
 }
 
-.linkto-model-preview-portal .bp3-transition-container {
+.linkto-model-preview-portal > .bp3-transition-container {
   border: 2px solid black;
   box-shadow: 4px 4px 4px rgba(0,0,0,.5);
   border-radius: 5px;
